# llm-tools-bash

./: .gitignore  README.md  llm_tools_bash.py  pyproject.toml
scripts/: diagnose_llm.sh  ollama_tool_matrix.py  run_smoke.py
tests/: test_ollama_tool_matrix_logic.py  test_tools_bash.py
