[project]
name = "llm-tools-bash"
version = "0.5.1"
description = "Run bash commands as an LLM tool (timeout, captured stdout/stderr)"
readme = "README.md"
authors = [{name = "Simon Willison"}, {name = "Fork authors"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.9"
dependencies = [
    "llm",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llm_tools_bash"]

[project.urls]
Homepage = "https://github.com/kernelzeroday/llm-tools-bash"
Documentation = "https://llm.datasette.io/"
Issues = "https://github.com/kernelzeroday/llm-tools-bash/issues"
CI = "https://github.com/kernelzeroday/llm-tools-bash/actions"
Upstream = "https://github.com/simonw/llm-tools-simpleeval"

[project.entry-points.llm]
tools_bash = "llm_tools_bash"

[project.optional-dependencies]
test = ["pytest", "llm-echo>=0.3a1"]
